# bitlab

./: .gitignore  README.md
bitlab_services/: docker-compose.yaml
bitlab_services/auth_service/: pyproject.toml
bitlab_services/core_service/: .env  load_env.py  pyproject.toml
bitlab_services/core_service/core_service/: app_factory.py  errors.py  main.py
bitlab_services/core_service/core_service/api/: routes.py
bitlab_services/core_service/core_service/api/v1/users/: user_request_models.py  user_response_models.py  users_routes.py
bitlab_services/core_service/core_service/contrib/: config.py
bitlab_services/core_service/core_service/models/: user.py
bitlab_services/core_service/deployment_profile/: local.yaml  stage.yaml
bitlab_services/services_common/service_common/database/db_manager/: users_db_manager.py
bitlab_services/services_common/service_common/database/documents/: user.py
bitlab_services/services_common/service_common/enums/: enums.py
bitlab_services/services_common/service_common/utils/: password_utils.py
bitlab_web/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
bitlab_web/src/: App.tsx  index.css  main.tsx  themeConf.ts
bitlab_web/src/Layout/: index.tsx
bitlab_web/src/components/Brand/: Brand.tsx
bitlab_web/src/components/NavBar/: NavBar.tsx
bitlab_web/src/pages/Error/: Error.tsx
bitlab_web/src/pages/Home/: Home.tsx
bitlab_web/src/pages/Login/: Login.tsx
bitlab_web/src/pages/Register/: Register.tsx
(+1 files in other folders)
